--- a/about.html
+++ b/about.html
@@ -5,29 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./about.css">
     <title>about me</title>
 </head>
 
 <body>
     <a href="index.html" class="back">Go Back</a>
     <section class="about">
-        <img class="shadow-pop-tr" src="./assets/img/about-img.png" alt="about-img">
+        <img class="shadow-pop-tr" src="./assets/img/myImg.jpg" alt="about-img">
         <div class="about-items">
             <h3>ABOUT ME</h3>
             <h2>Personal Details</h2>
             <p>Hi, I’m Charlotte Maanianu Seyab, a backend-focused full-stack web developer with a strong foundation in
-                server-side technologies like Node.js, Express, and databases such as MongoDB. While I’m proficient in
+                server-side technologies like Node.js, Express, and databases such as MongoDB. <br>While I’m proficient in
                 front-end development with HTML, CSS, and JavaScript, my true expertise lies in building scalable,
                 secure, and efficient back-end systems. <br> I specialize in creating APIs, managing databases, and
                 ensuring smooth communication between front-end and back-end components. <br>
 
                 With a background in social work, I bring a unique user-centered approach to my projects, ensuring that
-                the solutions I develop are both functional and impactful. I’m continually expanding my knowledge in
+                the solutions I develop are both functional and impactful. <br> I’m continually expanding my knowledge in
                 advanced backend technologies and aim to work on projects that challenge me to build robust, data-driven
                 applications.</p>
             <!-- <button class="btn3 scale-up-center">VIEW FULL DETAILS</button> -->
-            <a href="./assets/files/first resume (2) - Charlotte Seyab.docx.pdf" download><button
-                    class="btn4 scale-up-center">Download CV</button></a>
+            <!-- <a href="./assets/files/first resume (2) - Charlotte Seyab.docx.pdf" download><button
+                    class="btn4 scale-up-center">Download CV</button></a> -->
         </div>
     </section>
     <section id="education">
