--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="services.css">
+    <link rel="stylesheet" href="myWorks.css">
+    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="footer.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Fauna+One">
     <script src="./messgae.js" defer></script>
@@ -15,7 +21,7 @@
     <style>
         /* width */
         ::-webkit-scrollbar {
-            width: 20px;
+            width: 15px;
         }
 
         /* Track */
@@ -26,7 +32,7 @@
 
         /* Handle */
         ::-webkit-scrollbar-thumb {
-            background: #66B9FD;
+            background: black;
             border-radius: 10px;
         }
 
@@ -39,7 +45,12 @@
 
 <body>
     <nav>
-        <img src="./assets/img/nav-img.png" alt="nav-img">
+        <div class="logo">
+            <img src="./assets/img/nav-img.png" alt="">
+        </div>
+
+        <div class="menu-btn">☰</div>
+
         <div class="nav-items">
             <a class="text-black nav-itm" href="#home">HOME</a>
             <a class="text-black" href="#about">ABOUT</a>
@@ -47,50 +58,43 @@
             <a class="text-black" href="#my works">MY WORKS</a>
             <a class="text-black" href="#contact">CONTACT</a>
         </div>
-        <button onclick="myFunction()" class="dark-mode-btn" id="mode-toggle">Dark mode</button>
+        <!-- <button onclick="myFunction()" class="dark-mode-btn" id="mode-toggle">Dark mode</button> -->
         <div id="google_translate_element"></div>
     </nav>
     <section class="hero-section hero" id="home">
-        <div class="hero-items" id="typewriter-container">
-            <h1 class="typewriter glow" id="typewriter"></h1>
-            <!-- <button class="btn1 rotate-center ">LEARN MORE</button> -->
-            <!-- "Hire Me" Button -->
-<button id="hireMeBtn" class="hire-me-button">Hire Me</button>
-
-<!-- Pop-up Form -->
-<div id="hireMeForm" class="form-popup">
-    <div class="form-container">
-        <span class="close" id="closeFormBtn">&times;</span>
-        <h2>Hire Me</h2>
-        <form action="submit_form.php" method="POST">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required></textarea>
-
-            <button type="submit" class="submit-btn">Send</button>
-        </form>
-    </div>
-</div>
-
+        <div class="hero-content">
+            <div class="hero-items">
+                <span class="greeting">Hello, I'm</span>
+                <h1>Charlotte M Seyab</h1>
+                <div class="typewriter"> A Backend Developer</div>
+                <p class="hero-description">
+                    Passionate about creating beautiful and functional web experiences.
+                    Specializing in full-stack development with expertise in modern web technologies.
+                </p>
+                <div class="hero-buttons">
+                    <a href="./assets/files/first resume (2) - Charlotte Seyab.docx.pdf" download><button
+                            class="btn4 scale-up-center">Download CV</button></a>
+                </div>
+            </div>
         </div>
-        <img class="hero-img" src="./assets/img/hero-img.png" alt="hero-img">
+        <div class="hero-image-container">
+            <img class="hero-img" src="./assets/img/myImg.jpg" alt="hero-img">
+        </div>
     </section>
     <section class="about" id="about">
-        <img class="shadow-pop-tr" src="./assets/img/about-img.png" alt="about-img">
+        <img class="shadow-pop-tr" src="./assets/img/myImg.jpg" alt="about-img">
         <div class="about-items">
             <h3>ABOUT ME</h3>
-            <h2>Personal Details</h2>
+            <!-- <h2>Personal Details</h2> -->
             <p>Hi, I'm Charlotte Seyab, a dedicated full-stack web developer with a passion for building user-friendly
-                and accessible web applications. With a background in social work, I’ve developed a unique perspective
-                on user needs and experience. I specialize in HTML, CSS, JavaScript, and Express, creating seamless
-                applications from front-end to back-end. My mission is to use my technical skills to design solutions
-                that make a difference in people's lives. When I'm not coding, you'll find me volunteering or exploring
-                new technology trends. Let's collaborate and build something impactful together!
+                and accessible web applications. <br> With a background in social work, I’ve developed a unique
+                perspective
+                on user needs and experience. <br> I specialize in HTML, CSS, JavaScript, and Express, creating seamless
+                applications from front-end to back-end. <br> My mission is to use my technical skills to design
+                solutions
+                that make a difference in people's lives. <br> When I'm not coding, you'll find me volunteering or
+                exploring
+                new technology trends. <br> Let's collaborate and build something impactful together!
 
             </p>
             <a href="about.html" class="btn3 scale-up-center">VIEW FULL DETAILS</a>
@@ -100,28 +104,26 @@
     <section id="services">
         <div class="services">
             <h2>MY OFFERED SERVICES</h2>
-            <p>At about this time of year, some months after New Year’s <br> resolutions have been made and kept, or
-                made and
-                neglected.</p>
+            <p>Professional web development solutions to bring your ideas to life</p>
         </div>
         <div class="services-items">
             <div class="my-items" data-aos="flip-left">
                 <span>&#9684;</span>
                 <h4>Web Design</h4>
-                <p>“It is not because things are difficult that we do not dare; it is because we do not dare that they
-                    are difficult.”</p>
+                <p>Creating responsive and user-friendly web designs that combine aesthetics with functionality.
+                    Focusing on modern design principles and optimal user experience.</p>
             </div>
             <div class="my-items" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                 <span>&#128187;</span>
                 <h4>Web Development</h4>
-                <p>If you are an entrepreneur, you know that your success cannot depend on the opinions of others. Like
-                    the wind, opinions.</p>
+                <p>Building robust full-stack applications using modern technologies like Node.js, Express, and MongoDB.
+                    Specializing in creating scalable and maintainable web solutions.</p>
             </div>
             <div class="my-items" data-aos="fade-right">
                 <span>&#128248;</span>
                 <h4>Virtual Assistance</h4>
-                <p>Do you want to be even more successful? Learn to love learning and growth. The more effort you put
-                    into improving your skills. Lorem ipsum dolor sit amet.</p>
+                <p>Providing technical support and consultation for web development projects.
+                    Offering guidance on best practices, technology selection, and implementation strategies.</p>
             </div>
         </div>
     </section>
@@ -282,6 +284,15 @@
 
     <script type="text/javascript"
         src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+    <script>
+        const menuBtn = document.querySelector('.menu-btn');
+        const navItems = document.querySelector('.nav-items');
+
+        menuBtn.addEventListener('click', () => {
+            navItems.classList.toggle('active');
+        });
+    </script>
 </body>
 
 </html>
